Updated changelog and added some screenshots for readme

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,5 +3,6 @@ OpenSky Client Changelog
 ========================================================================================================================================================
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
-Version 1.0.0 (PRE-ALPHA)
+Version 0.1.0 (ALPHA1)
 --------------------------------------------------------------------------------------------------------------------------------------------------------
+*) First version released to alpha testers
