Added edit variant to my fleet
Finished purchase aircraft (with working variant selection)
Updated nuget packages
Bumped versions to 0.2.0

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,12 @@ OpenSky Client Changelog
 ========================================================================================================================================================
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
+Version 0.2.0 (ALPHA2)
+--------------------------------------------------------------------------------------------------------------------------------------------------------
+*) New aircraft variant system
+*) New purchase aircraft view
+
+--------------------------------------------------------------------------------------------------------------------------------------------------------
 Version 0.1.0 (ALPHA1)
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 *) First version released to alpha testers
