Added profile image upload
Also extended installer file name to include build number

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,15 @@ Version 0.2.0 (ALPHA2)
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 *) New aircraft variant system
 *) New purchase aircraft view
+*) Profile image can be changed from settings
+
+--------------------------------------------------------------------------------------------------------------------------------------------------------
+Version 0.1.1 (ALPHA1)
+--------------------------------------------------------------------------------------------------------------------------------------------------------
+*) Added support for re-positioning flights
+*) Added missing airport markers to flight-log map view
+*) Fixed too many digits on world map tooltips
+*) Improved settings view login/logout handling
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 Version 0.1.0 (ALPHA1)
