--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ Version 0.2.0 (ALPHA2)
 *) New aircraft variant system
 *) New purchase aircraft view
 *) Profile image can be changed from settings
+*) Added auto update support
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 Version 0.1.1 (ALPHA1)
