--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,8 @@ Version 0.2.0 (ALPHA2)
 *) New purchase aircraft view
 *) Profile image can be changed from settings
 *) Added auto update support
+*) Added default UTC offset setting
+*) Fixed bug that could prevent the main menu from working correctly
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 Version 0.1.1 (ALPHA1)
