--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,7 @@ Version 0.2.0 (ALPHA2)
 *) Added auto update support
 *) Added default UTC offset setting
 *) Fixed bug that could prevent the main menu from working correctly
+*) Applied initial sorting to most data grids
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 Version 0.1.1 (ALPHA1)
