Improved concurrent token refresh handling
Bumped version to 0.2.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ========================================================================================================================================================
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
+Version 0.2.1 (ALPHA2)
+--------------------------------------------------------------------------------------------------------------------------------------------------------
+*) Improved concurrent token refresh handling
+
+--------------------------------------------------------------------------------------------------------------------------------------------------------
 Version 0.2.0 (ALPHA2)
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 *) New aircraft variant system
