--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,10 @@ OpenSky Client Changelog
 Version 0.2.1 (ALPHA2)
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 *) Improved concurrent token refresh handling
+*) Fixed map-viewer crash
+*) Added aircraft type management from agent-msfs
+*) Fixed simBrief download OFP endless loop 
+*) Added aircraft type upgrade
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 Version 0.2.0 (ALPHA2)
