Updated changelog, ready for 0.2.3

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,12 @@ OpenSky Client Changelog
 ========================================================================================================================================================
 
 --------------------------------------------------------------------------------------------------------------------------------------------------------
+Version 0.2.3 (ALPHA2)
+--------------------------------------------------------------------------------------------------------------------------------------------------------
+- Fixed local airport package issue, switched over to new shared library project
+- Updated third party libraries that caused aircraft type crash
+
+--------------------------------------------------------------------------------------------------------------------------------------------------------
 Version 0.2.2 (ALPHA2)
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 - Improved simBrief OFP download
