Hiding legend on non-airport maps
Code cleanup

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,7 @@ OpenSky Client Changelog
 --------------------------------------------------------------------------------------
 Version 0.3.0 (ALPHA3)
 --------------------------------------------------------------------------------------
-
+- Added airports to the world map
 
 --------------------------------------------------------------------------------------
 Version 0.2.3 (ALPHA2)
