Lot's of UI changes
Flight log displays payload info from XML
Flight plan shows trail with animation between origin and destination
Flight plans overview shows payloads subgrid
Job market shows ideal for category plus distances for payloads
My fleet shows loaded payloads subgrids

--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ Version 0.3.0 (ALPHA3)
 - Added job market and "My Jobs"
 - Added payloads to flight planning
 - Added manual aircraft ground operations
+- Added support for aircraft types with flight engineers
 
 --------------------------------------------------------------------------------------
 Version 0.2.3 (ALPHA2)
