--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.3.1 (ALPHA3)
+--------------------------------------------------------------------------------------
+- Aircraft type max allowed payload delta
+
+--------------------------------------------------------------------------------------
 Version 0.3.0 (ALPHA3)
 --------------------------------------------------------------------------------------
 - Added airports to the world map
