Added sell aircraft to system method
Added support for min/max popup filter using SettingsUnitConverter.ConvertBack
Bumped version to 0.3.1 for release

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,10 @@ OpenSky Client Changelog
 Version 0.3.1 (ALPHA3)
 --------------------------------------------------------------------------------------
 - Aircraft type max allowed payload delta
+- Job market filtering enhancements
+- More datagrid filtering options throughout
+- Added cross links between modules
+- Added sell aircraft back to system
 
 --------------------------------------------------------------------------------------
 Version 0.3.0 (ALPHA3)
