Fixed flight plan start/save not saving payloads
Bumped version to 0.3.2 for release

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.3.2 (ALPHA3)
+--------------------------------------------------------------------------------------
+- Fixed flight plan start/save not saving payloads
+
+--------------------------------------------------------------------------------------
 Version 0.3.1 (ALPHA3)
 --------------------------------------------------------------------------------------
 - Aircraft type max allowed payload delta
