--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.3.3 (ALPHA3)
+--------------------------------------------------------------------------------------
+- Added custom notifications and message boxes
+
+--------------------------------------------------------------------------------------
 Version 0.3.2 (ALPHA3)
 --------------------------------------------------------------------------------------
 - Fixed flight plan start/save not saving payloads
