Refreshed swagger client so that S2Cells are now strings
Added local airport extension that supports parsing back to ulong
Bumped version to 0.3.4 for release

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.3.4 (ALPHA3)
+--------------------------------------------------------------------------------------
+- Fixed S2 cell IDs ulong conversion bug
+
+--------------------------------------------------------------------------------------
 Version 0.3.3 (ALPHA3)
 --------------------------------------------------------------------------------------
 - Added custom notifications and message boxes
