Added flight stats graphs from agent
Updated nuget
Bumped version to 0.3.5 for release

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.3.5 (ALPHA3)
+--------------------------------------------------------------------------------------
+- Added flight stats graph to flight log viewer
+
+--------------------------------------------------------------------------------------
 Version 0.3.4 (ALPHA3)
 --------------------------------------------------------------------------------------
 - Fixed S2 cell IDs ulong conversion bug
