--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@ Version 0.4.0 (ALPHA4)
 - Added airport warning/error system to flight planning
 - Added financial overview page
 - Overhauled both data import and world statistics pages
+- Added support for X-Plane 11
 
 --------------------------------------------------------------------------------------
 Version 0.3.5 (ALPHA3)
