--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,12 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.4.1 (ALPHA4)
+--------------------------------------------------------------------------------------
+- Added support for short cargo jobs
+- Updated world statistics page with per simulator numbers
+
+--------------------------------------------------------------------------------------
 Version 0.4.0 (ALPHA4)
 --------------------------------------------------------------------------------------
 - Added account balances to certain pages
