--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.4.3 (ALPHA4)
+--------------------------------------------------------------------------------------
+- Fixed airport marker caching bug in flight planning page
+
+--------------------------------------------------------------------------------------
 Version 0.4.2 (ALPHA4)
 --------------------------------------------------------------------------------------
 - Added purchase new aircraft page
