Added more tooltips
Bugfixes
Updated nuget packages

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,13 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.4.4 (ALPHA4)
+--------------------------------------------------------------------------------------
+- Expanded aircraft tooltips
+- Added detailed airport tooltips
+- Added airport search
+
+--------------------------------------------------------------------------------------
 Version 0.4.3 (ALPHA4)
 --------------------------------------------------------------------------------------
 - Fixed airport marker caching bug in flight planning page
