--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.1 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Added user manager page for admins
+
+--------------------------------------------------------------------------------------
 Version 0.5.0 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Updated libraries to fix security issues and bugs
