Updated nuget packages and bumped version and changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,12 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.2 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Added support for new fueling option at airports that don't sell any
+- Bugfixes and library updates
+
+--------------------------------------------------------------------------------------
 Version 0.5.1 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Added user manager page for admins
