Added support for strobe for beacon
Bumped version for next release

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.3 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Added support for "Strobe for Beacon"
+
+--------------------------------------------------------------------------------------
 Version 0.5.2 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Added support for new fueling option at airports that don't sell any
