Added support for ATC callsign and first online network Vatsim to flight plans
Added vatsim CID as new linked account to settings

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,12 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.4 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Added support for ATC callsign and first online network Vatsim to flight plans
+- Added vatsim CID as new linked account to settings
+
+--------------------------------------------------------------------------------------
 Version 0.5.3 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Added support for "Strobe for Beacon"
