Added changelog and bumped version

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,12 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.5 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Fixed keyboard input on all auto suggest boxes
+- Auto uppercasing of airport ICAOs
+
+--------------------------------------------------------------------------------------
 Version 0.5.4 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Added support for ATC callsign and first online network Vatsim to flight
