--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ Version 0.5.5 (ALPHA5)
 - Fixed keyboard input on all auto suggest boxes
 - Auto uppercasing of airport ICAOs
 - Fixed save flight during start not saving online network settings
+- Now highlighting differences between two selected aircraft types
 
 --------------------------------------------------------------------------------------
 Version 0.5.4 (ALPHA5)
