--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,13 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.6 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Fixed auto suggest uppercase causing new search and requiring two clicks to select
+  suggestions
+- Landing Analysis 2.0
+
+--------------------------------------------------------------------------------------
 Version 0.5.5 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Fixed keyboard input on all auto suggest boxes
