Added support for my jobs distances
Bumped version to 5.9

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,12 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.9 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Fixed max grid height in notifications page
+- Added distance information to "My jobs" page
+
+--------------------------------------------------------------------------------------
 Version 0.5.8 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Added notifications
