Aircraft position update for my fleet
Added osm watermark to map
Aircraft position IsSelected support added
Removed bing maps key from settings

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,8 @@ Version 0.5.9 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Fixed max grid height in notifications page
 - Added distance information to "My jobs" page
+- Map views now using OSM, bing maps key no longer necessary, removed from settings
+- Aircraft on the "My fleet" page can be selected, map highlights and tooltips added
 
 --------------------------------------------------------------------------------------
 Version 0.5.8 (ALPHA5)
