Fixed image cache dictionary crash
Bumped version and added changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@ OpenSky Client Changelog
 ======================================================================================
 
 --------------------------------------------------------------------------------------
+Version 0.5.10 (ALPHA5)
+--------------------------------------------------------------------------------------
+- Hotfix for aircraft type image caching bug
+
+--------------------------------------------------------------------------------------
 Version 0.5.9 (ALPHA5)
 --------------------------------------------------------------------------------------
 - Fixed max grid height in notifications page
